# capstash-wallet-android-lite

./: .gitignore  App.js  README.md  WalletScreen.js  app.json  globals.js  index.js  metro.config.js  package-lock.json  package.json  rpc.js  walletManager.js
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whirlpool.c.bak
android/app/src/main/java/com/capstashwallet/: MainActivity.kt  MainApplication.kt  MinerModule.java  MinerPackage.java  NodeModule.java  NodePackage.java  NodeService.java
android/app/src/main/res/values/: strings.xml
components/: CRTWrapper.js  FieldManual.js  QRScannerModal.js  RigCard.js  SetupMenu.js  Setupmenu.js  TierName.js
docs/: Drifter_Setup.md  Migrating_From_Qt_Wallet.md  Remote_Node_Setup.md  Rig_Monitor_Setup.md
ios/: Podfile
ios/CapStashWallet/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/CapStashWallet.xcodeproj/: project.pbxproj
ios/CapStashWallet.xcodeproj/xcshareddata/xcschemes/: CapStashWallet.xcscheme
ios/CapStashWalletTests/: CapStashWalletTests.m
screens/: ExplorerScreen.js  MinerScreen.js  ModeSelectScreen.js  NetworkScreen.js  SeedGenerateScreen.js  SeedRestoreScreen.js  SeedVerifyScreen.js  SoloScreen.js  WalletScreen.js
services/: appMode.js  miner.js  nodeManager.js  nodeService.js  rigStorage.js  rpc.js  seedDerivation.js  walletManager.js
theme/: colors.js  spacing.js  typography.js
utils/: badges.js  wasteland.js
